--- a/wisepanda-monolith/src/main/resources/application.yml
+++ b/wisepanda-monolith/src/main/resources/application.yml
@@ -3,9 +3,9 @@ server:
 
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/org_dev_db
-    username: postgres
-    password: postgres1234
+    url: jdbc:postgresql://localhost:5432/dev_db
+    username: dev_admin
+    password: Db@1997
     driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
