--- a/build.gradle
+++ b/build.gradle
@@ -26,11 +26,16 @@ ext {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+	//implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+	implementation group: 'org.apache.commons', name: 'commons-collections4', version: '4.4'
+	implementation group: 'org.primefaces', name: 'primefaces', version: '12.0.0-RC3'
+	implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-jasper', version: '9.0.65'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation group: 'org.liquibase', name: 'liquibase-gradle-plugin', version: '2.1.1'
 	implementation group: 'org.springdoc', name: 'springdoc-openapi-ui', version: '1.6.9'
 	compileOnly 'org.projectlombok:lombok'
+	implementation group: 'com.sun.faces', name: 'jsf-api', version: '2.2.20'
+	implementation group: 'com.sun.faces', name: 'jsf-impl', version: '2.2.20'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'org.postgresql:postgresql'
 	annotationProcessor 'org.projectlombok:lombok'
