--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/dev_db
     username: dev_admin
-    password: Db@1997
+    password: password
     driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
